kubernetes-networks/canary/canary-web-svc-headless.yaml
apiVersion: v1
kind: Service
metadata:
   name: canary-web-svc
   namespace: canary
spec:
   selector:
     app: web
   type: ClusterIP
   clusterIP: None
   ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
